# match3_embedded

./: CMakeLists.txt  LICENSE  README.md
cmake/: BuidType.cmake  CompilerWarnings.cmake  CrossCompiling.cmake  Dependencies.cmake  GenerateElf.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  clang-toolchain.cmake  emscripten-toolchain.cmake  iar-toolchain.cmake  stm32-gcc-toolchain.cmake  target_include_directories_system.cmake  target_link_libraries_system.cmake  xmc4x00-gcc-toolchain.cmake
config/: CMakeLists.txt
config/libconfig/: config.hpp
controller/: CMakeLists.txt
controller/libcontroller/: player.hpp  switcher.hpp
controller/libcontroller/actions/: add_points.hpp  clear_selected.hpp  drop_item.hpp  find_matches.hpp  generate_new.hpp  reset.hpp  select_item.hpp  show_moves.hpp  show_points.hpp  show_swap.hpp  swap_items.cpp  swap_items.hpp
controller/libcontroller/events/: quit.hpp
controller/libcontroller/guards/: has_items.hpp  is_allowed.hpp  is_item_winning.cpp  is_item_winning.hpp  is_key.cpp  is_swap_items_winning.hpp
controller_desktop/: CMakeLists.txt
controller_desktop/libcontroller/actions/: add_points.hpp  clear_selected.cpp  destroy_matches.hpp  drop_item.cpp  drop_item.hpp  scroll_board.cpp  scroll_board.hpp  show_board.hpp  show_game_over.hpp  show_matches.hpp  show_points.hpp  swap_items.hpp
controller_desktop/libcontroller/events/: down.hpp  key_pressed.hpp  matches.hpp  up.hpp
controller_stm/: CMakeLists.txt
controller_stm/libcontroller/: player.hpp  switcher.hpp
controller_stm/libcontroller/actions/: destroy_matches.cpp  find_matches.cpp  find_matches.hpp  generate_new.cpp  select_item.hpp  show_game_over.hpp  show_swap.hpp
controller_stm/libcontroller/events/: down.hpp  key_pressed.hpp  matches.hpp  quit.hpp  time_tick.hpp  up.hpp
core/: CMakeLists.txt
core/libcore/: Warnings.hpp
include/: game.hpp
include/controller/: player.hpp  switcher.hpp
include/controller/actions/: add_points.hpp  find_matches.hpp  generate_new.hpp  reset.hpp  show_board.hpp
include/model/: board.hpp
include/view/: animations.hpp  view.hpp
match3_desktop/: CMakeLists.txt
match3_desktop/desktop/: game.hpp  main.cpp
match3_stm/: CMakeLists.txt  main.c  time.cpp
match3_stm/Drivers/: CMakeLists.txt
match3_stm/Drivers/stm/: CMakeLists.txt
match3_stm/Drivers/stm/Inc/: FreeRTOSConfig.h  main.h  s70kl1281_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
match3_stm/Drivers/stm/Src/: freertos.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
match3_stm/Middlewares/: CMakeLists.txt
match3_stm/TouchGFX/: ApplicationTemplate.touchgfx.part  CMakeLists.txt  application.config  game.hpp  make_game.cpp  match3.touchgfx  match3_backup.touchgfx  target.config
match3_stm/TouchGFX/App/: app_touchgfx.c  app_touchgfx.h
match3_stm/TouchGFX/assets/texts/: texts.xml
match3_stm/TouchGFX/config/gcc/: app.mk
match3_stm/TouchGFX/config/msvs/: Application.props
match3_stm/TouchGFX/gui/include/gui/model/: Model.hpp  ModelListener.hpp
match3_stm/TouchGFX/gui/include/gui/screen1_screen/: Screen1View.hpp  touchgfx_canvas.hpp
match3_stm/TouchGFX/gui/src/model/: Model.cpp
match3_stm/TouchGFX/gui/src/screen1_screen/: Screen1View.cpp
match3_stm/TouchGFX/simulator/msvs/: Application.vcxproj.filters
match3_stm/linkerscript/: STM32H735IGKX_FLASH.ld
model/: CMakeLists.txt
model/libmodel/: board.cpp  board.hpp
model/libmodel/guards/: has_items.hpp  is_allowed.hpp  is_item_winning.cpp  is_item_winning.hpp  is_key.cpp  is_swap_items_winning.hpp
src/: main.cpp
test/: CMakeLists.txt
test/common/common/: fakeit.hpp  logger.hpp  utils.hpp
test/functional_tests/: match3_matchl_no_moves_reset.cpp  match5_out_of_moves.cpp
view/: CMakeLists.txt
view/libview/: ianimations.hpp  sdl_canvas.hpp  view.hpp
view_desktop/libview/: animations.hpp
view_stm/: CMakeLists.txt
view_stm/libview/: animations.hpp  view.hpp
